--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <script>var __pbpa = true;</script><script>var translated_warning_string = 'Warning: Never enter your Tumblr password unless \u201chttps://www.tumblr.com/login\u201d\x0ais the address in your web browser.\x0a\x0aYou should also see a green \u201cTumblr, Inc.\u201d identification in the address bar.\x0a\x0aSpammers and other bad guys use fake forms to steal passwords.\x0a\x0aTumblr will never ask you to log in from a user\u2019s blog.\x0a\x0aAre you absolutely sure you want to continue?';</script><script type="text/javascript" language="javascript" src="http://assets.tumblr.com/assets/scripts/pre_tumblelog.js?_v=4e09fe74b282f245aeafcf8a701d8e5f"></script>
 <!DOCTYPE html>
@@ -223,7 +222,7 @@
                             http://adsabs.harvard.edu/cgi-bin/nph-abs_connect?library&libname=Publications&libid=4e68f56b0e">
                             Publications.</a> <br>
                             
-                            CV (coming soon...!)<br>
+                            TESTCV (coming soon...!)<br>
                         </span>
                     </div>
 
