Fixed thesis link

--- a/research/index.html
+++ b/research/index.html
@@ -222,9 +222,8 @@
                             In the past, I also worked with 
                             Rosanne Di Stefano at the Harvard-Smithsonian 
                             CfA on discovering exoplanets with microlensing,
-                            and wrote a <a hrtef=
-                            "http://www.astro.soton.ac.uk/
-                            ~jm8g08/misc/PDF/thesis.pdf"> masters thesis</a> 
+                            and wrote a <a href=
+                            "http://jhmatthews.github.io/website/docs/thesis.pdf"> masters thesis</a> 
                             on the topic.
                             
 
