--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ It is threatened by habitat loss.
                     col-md-3
                     col-lg-2">
           <p>
-            <img src="img/phd-thesis.png" 
+            <img src="img/quasar.jpg" 
                  class="img-responsive img-thumbnail"
                  style="width:100%">
           </p>
@@ -276,7 +276,7 @@ It is threatened by habitat loss.
                     col-md-3
                     col-lg-2">
           <p>
-            <img src="img/phd-thesis.png" 
+            <img src="img/gj.png" 
                  class="img-responsive img-thumbnail"
                  style="width:100%">
           </p>
@@ -288,14 +288,16 @@ It is threatened by habitat loss.
           <p>
             <b>
               
-                <a href="/img/quasar.jpg">
+                <a href="docs.thesis.pdf">
                   Searching for Exoplanets During Predicted Lensing Events
                 </a>
               
             </b>
           </p>
 
-          <p>Outflows are ubiquitous in accreting systems. My PhD thesis involved developing a Monte Carlo radiative transfer and photoionization code, and using it to synthesize spectra of accreting objects with associated outflows.</p>
+          <p>Microlensing events are transient brightenings in a background stars light, caused
+            by the motion of a foreground graviational lens across it's line of sight. My masters thesis
+            involved predicting these events, so we could search for explanets with targeted, systematic monitoring programs</p>
 
         </div>
       </div>
