--- a/index.html
+++ b/index.html
@@ -84,18 +84,18 @@ It is threatened by habitat loss.
 
         <div class="lead">
           <p>I’m an astrophysics PhD student studying at the University of Southampton. 
-            My expertise relates to radiative transfer techniques and how they can be applied
+            My expertise relates to Monte Carlo radiative transfer techniques and how they can be applied
             to astrophysical situations. <br>
             <br>
             I am interested in a number of key questions:<br>
             <bf>- Can quasars and active galactic nuclei be unified by simple geometric scenarios?<br>
             - How similar is the accretion process on multiple mass scales?<br>
-            - Where do the emission lines come form in accreting systems?<br>
+            - Where do the emission lines form in accreting systems?<br>
             - What physical mechanism drives material away from accretion discs?<br>
             <br><br>
             
 
-            My research involves using a Monte Carlo radiative transfer code to model  accretion disk winds and the spectral features they produce.  I am supervised by Professor Christian Knigge. You can find more details on my research, outreach and publications below.</p>
+            I am currently supervised by Professor Christian Knigge. You can find more details on my research, outreach and publications below.</p>
 
         </div>
         
