--- a/index.html
+++ b/index.html
@@ -93,8 +93,14 @@ It is threatened by habitat loss.
             - Where do the emission lines form in accreting systems?<br>
             - What physical mechanism drives material away from accretion discs?<br>
             <br><br>
-            
-
+            The general principle of our work can be summed up by this XKCD-style plot:
+            <br>
+            <a href="images/fig2_cartoon_xkcd.png"><img src="images/fig2_cartoon_xkcd.png" 
+                 class="img-circle img-responsive"
+                 style="width:80%"
+                 align="middle"></a>
+  
+            <br><br>
             I am currently supervised by Professor Christian Knigge. You can find more details on my research, outreach and publications below, and also read my CV <a href="docs/jm_cv.pdf">here.</a></p>
 
         </div>
