--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ It is threatened by habitat loss.
             The general principle of our work can be summed up by this XKCD-style plot:
             <br>
             <a href="images/fig2_cartoon_xkcd.png"><img src="images/fig2_cartoon_xkcd.png" 
-                 class="img-circle img-responsive"
+                 class="img-thumbnail img-responsive"
                  style="width:80%"
                  align="middle"></a>
   
