--- a/index.html
+++ b/index.html
@@ -202,6 +202,40 @@ It is threatened by habitat loss.
         </div>
       </div>
 
+      <div class="row">
+        <div class="col-xs-4
+                    col-sm-3
+                    col-md-3
+                    col-lg-2">
+          <p>
+            <img src="img/ev1_small.png" 
+                 class="img-responsive img-thumbnail"
+                 style="width:100%">
+          </p>
+        </div>
+        <div class="col-xs-12
+                    col-sm-9
+                    col-md-6
+                    col-lg-7">
+          <p>
+            <b>
+              
+                <a href="/img/quasar.jpg">
+                  Quasar and AGN unification and orientation
+                </a>
+              
+            </b>
+          </p>
+          It would be rather elegant if all accreting supermassive black holes could essentially be described by
+          their <b>mass, Eddington ratio</b> and <b>viewing angle</b>. 
+          While countless other complications doubtless exist 
+          (environment almost certainly being one), I am especially interested in <b>testing this paradigm.</b>
+          Part of this work involves searching for <b>reliable orientation indicators</b>, so we can constrain the geometry of absorbing and emitting plasma around the central engine. Image credit: Shen & Ho 2014.
+          <p></p>
+
+        </div>
+      </div>
+
 
 
 
