--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ It is threatened by habitat loss.
             </b>
           </p>
 
-          <p>Outflows are ubiquitous in accreting systems. My PhD thesis involved developing a Monte Carlo radiative transfer and photoionization code, and using it to synthesize spectra of accreting objects with associated outflows.</p>
+          <p><b>Outflows are ubiquitous</b> in accreting systems. My PhD thesis involves developing a <b>Monte Carlo radiative transfer and photoionization code</b>, and using it to synthesize spectra of accreting objects with associated outflows.</p>
 
         </div>
       </div>
@@ -265,9 +265,9 @@ It is threatened by habitat loss.
             </b>
           </p>
 
-          <p>Microlensing events are transient brightenings in a background stars light, caused
+          <p>Microlensing events are <b>transient brightenings</b> in a background stars light, caused
             by the motion of a foreground graviational lens across it's line of sight. My masters thesis
-            involved predicting these events, so we could search for explanets with targeted, systematic monitoring programs</p>
+            involved <b>predicting these events</b>, so we could search for explanets with targeted, systematic monitoring programs</p>
 
         </div>
       </div>
