--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@ It is threatened by habitat loss.
             My expertise relates to Monte Carlo radiative transfer techniques and how they can be applied
             to astrophysical situations. <br>
             <br>
-            I am currently supervised by Professor Christian Knigge. You can find more details on my research, outreach and publications below, and also read my CV <a href="docs/jm_cv.pdf">here.</a></p>
+            I am currently supervised by Professor Christian Knigge. The general principle of our work can be summed up by <a href="images/fig2_cartoon_xkcd.png">this XKCD-style plot.</a> 
+            but you can find more details on my research, outreach and publications below, 
+            and also read my CV <a href="docs/jm_cv.pdf">here.</a></p>
             <br><br>
             <!--br>
             I am interested in a number of key questions:<br>
@@ -96,14 +98,13 @@ It is threatened by habitat loss.
             - Where do the emission lines form in accreting systems?<br>
             - What physical mechanism drives material away from accretion discs?<br>
             <br><br-->
-            The general principle of our work can be summed up by this XKCD-style plot:
+            The general principle of our work can be summed up by this XKCD-style plot.
             <br>
-            <a href="images/fig2_cartoon_xkcd.png"><img src="images/fig2_cartoon_xkcd.png" 
+            <!--a href="images/fig2_cartoon_xkcd.png"><img src="images/fig2_cartoon_xkcd.png" 
                  class="img-thumbnail img-responsive"
                  style="width:60%"
-                 align="middle"></a>
-  
-            <br><br>
+                 align="middle"></a-->
+
 
         </div>
         
