--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@ It is threatened by habitat loss.
             to astrophysical situations. <br>
             <br>
             I am currently supervised by Professor Christian Knigge. The general principle of our work can be summed up by <a href="images/fig2_cartoon_xkcd.png">this XKCD-style plot.</a> 
-            but you can find more details on my research, outreach and publications below, 
-            and also read my CV <a href="docs/jm_cv.pdf">here.</a></p>
             <br><br>
+            You can find more details on my research, outreach and publications below, 
+            and also read my CV <a href="docs/jm_cv.pdf">here.</a></p>
             <!--br>
             I am interested in a number of key questions:<br>
             <bf>- Can quasars and active galactic nuclei be unified by simple geometric scenarios?<br>
@@ -98,8 +98,6 @@ It is threatened by habitat loss.
             - Where do the emission lines form in accreting systems?<br>
             - What physical mechanism drives material away from accretion discs?<br>
             <br><br-->
-            The general principle of our work can be summed up by this XKCD-style plot.
-            <br>
             <!--a href="images/fig2_cartoon_xkcd.png"><img src="images/fig2_cartoon_xkcd.png" 
                  class="img-thumbnail img-responsive"
                  style="width:60%"
