--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@ It is threatened by habitat loss.
         <div class="col-md-9">
           <p>
             <b>
-                Disc Winds Matter! - Their impact the optical spectra of cataclysmic variables
+                Disc Winds Matter! Their impact on the optical spectra of cataclysmic variables
             </b>
             <small>
               September 2015
