--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ It is threatened by habitat loss.
             </b>
           </p>
 
-          <p><b>Outflows are ubiquitous</b> in accreting systems. My PhD thesis involves developing a <b>Monte Carlo radiative transfer and photoionization code</b>, and using it to synthesize spectra of accreting objects with associated outflows.</p>
+          <p><b>Outflows are ubiquitous</b> in accreting systems. I spend my PhD developing a <b>Monte Carlo radiative transfer and photoionization code</b>, and using it to synthesize spectra of accreting objects with associated outflows.</p>
 
         </div>
       </div>
@@ -268,7 +268,7 @@ It is threatened by habitat loss.
 
           <p>Microlensing events are <b>transient brightenings</b> in a background stars light, caused
             by the motion of a foreground graviational lens across it's line of sight. My masters thesis
-            involved <b>predicting these events</b>, so we could search for explanets with targeted, systematic monitoring programs</p>
+            focused on <b>predicting these events</b>, so we could search for explanets with targeted, systematic monitoring programs</p>
 
         </div>
       </div>
@@ -291,12 +291,16 @@ It is threatened by habitat loss.
           <p>
             <b>
                 <a href="http://astrodome.soton.ac.uk/">
-                Outreach
+                Public Engagement 
                 </a>
             </b>
           </p>
 
-          <p>My outreach work involves taking this huge inflatable planetarium into local schools.  As you can tell I get pretty excited about this!</p>
+          <p>My public engagement work involves taking this huge inflatable planetarium into local schools.  As you can tell I get pretty excited about this. I also enjoy giving public talks. These are 
+          normally about alien life as that is the most popular topic for kids, 
+          but I've also given more specialised talks on winds and tori around black holes. This session included 
+          donuts.
+          </p>
 
         </div>
       </div>
