added oxford info

--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@ It is threatened by habitat loss.
         <div class="lead">
           <p>I’m an astrophysics postdoctoral researcher working at the University of Oxford. 
           My research can be broadly summarised as understanding the impact of outflow and accretion
-          in the universe, in particular by using state-of-the-art numerical techniques in MHD
+          in the universe, in particular by using state-of-the-art MHD
           and radiative transfer codes.
           <br><br>
-            My PhD was supervised by Professor Christian Knigge and involved Monte Carlo radiative transfer techniques and how they can be applied to astrophysical situations. <br>
+            My PhD was supervised by Professor Christian Knigge and involved Monte Carlo radiative transfer techniques and how they can be applied to astrophysical situations.
             <br><br>
             I am currently working with Professors Katherine Blundell and Tony Bell on cosmic ray
             acceleration. The aim is to understand the acceleration mechanism in more detail and 
@@ -197,7 +197,7 @@ OX1 3RH
           <p>
             <b>
               
-                <a href="/img/quasar.jpg">
+                <a href="/img/mhd.png">
                   Cosmic Ray Acceleration and MHD Simulations
                 </a>
               
