--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ OX1 3RH
                     col-md-3
                     col-lg-2">
           <p>
-            <img src="img/quasar.jpg" 
+            <img src="/img/mhd.png"
                  class="img-responsive img-thumbnail"
                  style="width:100%">
           </p>
