--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@ OX1 3RH
         <p>You can find these publications on 
           <a href="http://adsabs.harvard.edu/cgi-bin/nph-abs_connect?library&libname=Publications&libid=4e68f56b0e">ADS</a>.
 
-          <p><b><a href="http://adsabs.harvard.edu/abs/2016MNRAS.458..293M">
+          <p><b><a href="#">
                 Quasar emission lines as probes of orientation:
                 implications for disc wind geometries and unification
               </a></b>
