--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@ It is threatened by habitat loss.
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 </head>
-<!-- <body class="intro-screen"> -->
-<body>
+<body class="intro-screen">
+<!-- <body> -->
   <!-- ==================== -->
   <!-- HEADER -->
   <!-- ==================== -->
