--- a/index.html
+++ b/index.html
@@ -371,13 +371,13 @@ OX1 3RH
         <p>You can find these publications on 
           <a href="http://adsabs.harvard.edu/cgi-bin/nph-abs_connect?library&libname=Publications&libid=4e68f56b0e">ADS</a>.
 
-          <p><b><a href="#">
+          <p><b><a href="https://arxiv.org/abs/1701.07037">
                 Quasar emission lines as probes of orientation:
                 implications for disc wind geometries and unification
               </a></b>
             <small>2017</small><br>
             Matthews, J. H.; Knigge, C.; Long, K. S.
-            <br> Accepted to MNRAS.
+            <br> Accepted to MNRAS, DOI:10.1093/mnras/stx231
           </p>
           
           <p><b><a href="http://adsabs.harvard.edu/abs/2016MNRAS.458..293M">
