--- a/index.html
+++ b/index.html
@@ -371,13 +371,21 @@ OX1 3RH
         <p>You can find these publications on 
           <a href="http://adsabs.harvard.edu/cgi-bin/nph-abs_connect?library&libname=Publications&libid=4e68f56b0e">ADS</a>.
 
-          <p><b><a href="https://arxiv.org/abs/1701.07037">
+          <p><b><a href="">
+                Amplification of perpendicular and parallel magnetic fields by cosmic ray currents
+              </a></b>
+            <small>2017</small><br>
+            Matthews, J.H., Bell. A., Blundell, K., Araudo, A.
+            <br> MNRAS, in press, DOI: 10.1093/mnras/stx905
+          </p>
+
+          <p><b><a href="https://academic.oup.com/mnras/article-lookup/doi/10.1093/mnras/stx231">
                 Quasar emission lines as probes of orientation:
                 implications for disc wind geometries and unification
               </a></b>
             <small>2017</small><br>
             Matthews, J. H.; Knigge, C.; Long, K. S.
-            <br> Accepted to MNRAS, DOI:10.1093/mnras/stx231
+            <br> MNRAS, 467, 2571
           </p>
           
           <p><b><a href="http://adsabs.harvard.edu/abs/2016MNRAS.458..293M">
