--- a/index.html
+++ b/index.html
@@ -502,8 +502,6 @@ OX1 3RH
   
 
   
-
-  
   <!-- ==================== -->
   <!-- PRESENTATIONS -->
   <!-- ==================== -->
@@ -513,6 +511,50 @@ OX1 3RH
         <h3>Presentations</h3>
       </div>
     </div>
+
+    <div class="row">
+        <div class="col-md-9">
+          <p>
+            <b>          
+                  Invited Review: Ultraviolet Astronomy     
+            </b>
+            <small>
+              March 2017
+            </small>
+            <br>
+            Broadband Astrophysical Processes, Southampton
+          </p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-9">
+          <p>
+            <b>
+                  Magnetic Field Amplification by Cosmic Rays
+            </b>
+            <small>
+              February 2017
+            </small>
+            <br>
+            Plasma seminar, Oxford
+          </p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-9">
+          <p>
+            <b> Modelling Disc Winds in Quasars
+            </b>
+            <small>
+              October 2016
+            </small>
+            <br>
+            SPI-MAX seminar, Oxford
+          </p>
+        </div>
+      </div>
 
       <div class="row">
         <div class="col-md-9">
