--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@ OX1 3RH
               </a></b>
             <small>2017</small><br>
             Matthews, J.H., Bell. A., Blundell, K., Araudo, A.
-            <br> MNRAS, in press, DOI: 10.1093/mnras/stx905
+            <br> MNRAS, 469, 1849
           </p>
 
           <p><b><a href="https://academic.oup.com/mnras/article-lookup/doi/10.1093/mnras/stx231">
@@ -386,6 +386,14 @@ OX1 3RH
             <small>2017</small><br>
             Matthews, J. H.; Knigge, C.; Long, K. S.
             <br> MNRAS, 467, 2571
+          </p>
+        
+         <p><b><a href="https://doi.org/10.1093/mnras/stx1863">
+                The reverberation signatures of rotating disc winds in active galactic nuclei
+              </a></b>
+            <small>2017</small><br>
+            Mangham, S. W., Knigge, C., Matthews, J. H.; Long, K. S.; Sim, S. A.; Higginbottom, N.,
+            <br> MNRAS, in press, DOI:10.1093/mnras/stx1863
           </p>
           
           <p><b><a href="http://adsabs.harvard.edu/abs/2016MNRAS.458..293M">
