--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@ OX1 3RH
               2013
             </small>
             <br>
-            Di Stefano, Rosanne; Matthews, James; Lépine, Sébastien
+            Di Stefano, R.; <b>Matthews, J. H.</b>; Lépine, S.
             <br>
             
                 ApJ,
