added uhecr page

--- a/UHECRs-from-jets.html
+++ b/UHECRs-from-jets.html
@@ -163,7 +163,7 @@ OX1 3RH
 
 
 
-        <h3>Projects</h3>
+        <h3>Movies</h3>
       </div>
     </div>
 
@@ -206,7 +206,7 @@ OX1 3RH
                     col-md-3
                     col-lg-2">
           <p>
-            <embed src="movies/movF3Dvz.mp4" autostart="false" width="100" />
+            <embed src="movies/movF3Dvz.mp4" autostart="false" width="200" />
           </p>
         </div>
         <div class="col-xs-12
