--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ It is threatened by habitat loss.
             transfer techniques and how they can be applied to astrophysical situations.-->
             <br><br>
             You can find more details on my research, outreach and publications below, 
-            or <a href="docs/jm_cv.pdf">read my CV.</a></p>
+            or <a href="docs/jmatthews_cv.pdf">read my CV.</a></p>
             <!--br>
             I am interested in a number of key questions:<br>
             <bf>- Can quasars and active galactic nuclei be unified by simple geometric scenarios?<br>
@@ -586,6 +586,37 @@ OX1 3RH
         <h3>Presentations</h3>
       </div>
     </div>
+   
+    
+    <div class="row">
+        <div class="col-md-9">
+          <p>
+            <b>   
+               Invited Colloquium: Cosmic Ray Acceleration in Shocks
+            </b>
+            <small>
+              April 2018
+            </small>
+            <br>
+              University of Manchester</a>
+          </p>
+        </div>
+      </div>
+
+<div class="row">
+        <div class="col-md-9">
+          <p>
+            <b>   
+               Invited Colloquium: Cosmic Ray Acceleration in Shocks
+            </b>
+            <small>
+              April 2018
+            </small>
+            <br>
+              University of Nottingham</a>
+          </p>
+        </div>
+      </div>
     
     <div class="row">
         <div class="col-md-9">
