--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ It is threatened by habitat loss.
           </h2>
         </div>
         <div class="col-xs-3 col-lg-3">
-          <img src="img/guitar1.jpg" 
+          <img src="img/portrait.jpg" 
                class="img-circle"
                style="margin-top:-6px;width:100px;border:2px solid rgba(255,255,255,0.75)">
         </div>
