--- a/oblique.html
+++ b/oblique.html
@@ -1,3 +1,3 @@
 <center>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<p>Have a hot drink.</p></center>
+<p>Tea leaves = answers.</p></center>
