--- a/UHECRs-from-jets.html
+++ b/UHECRs-from-jets.html
@@ -180,13 +180,13 @@ OX1 3RH
                 <a href="movies/movF3Dvz.mp4">
                   movF3Dvz
                 </a>
-                Volume rendering of the fiducial fast 3D simulation, F3D,
-                showing v_z, the vertical component of velocity. The opacity is set linearly
-                by the jet tracer.
             </b>
           </p>
 
-          <p>Movie 
+          <p>
+                Volume rendering of the fiducial fast 3D simulation, F3D,
+                showing v_z, the vertical component of velocity. The opacity is set linearly
+                by the jet tracer.
           </p>
 
         </div>
@@ -199,7 +199,7 @@ OX1 3RH
                     col-md-6
                     col-lg-6">
           <p>
-            <embed src="movies/movF3Dvz.mp4" autostart="false" width="300" height="600" />
+            <embed src="movies/movF3DMach.mp4" autostart="false" width="300" height="600" />
           </p>
         </div>
         <div class="col-xs-12
@@ -212,13 +212,12 @@ OX1 3RH
                 <a href="movies/movF3DMach.mp4">
                   movF3DMach
                 </a>
-                Volume rendering of the fiducial fast 3D simulation, F3D,
-                showing the Mach number. The opacity is set linearly
-                by the kinetic energy flux.
             </b>
           </p>
 
-          <p>Movie 
+          <p>                Volume rendering of the fiducial fast 3D simulation, F3D,
+                showing the Mach number. The opacity is set linearly
+                by the kinetic energy flux.
           </p>
 
         </div>
@@ -230,7 +229,7 @@ OX1 3RH
                     col-md-6
                     col-lg-6">
           <p>
-            <embed src="movies/movF3Dvz.mp4" autostart="false" width="300" height="600" />
+            <embed src="movies/movS1Machvz.mp4" autostart="false" width="300" height="600" />
           </p>
         </div>
         <div class="col-xs-12
@@ -243,13 +242,16 @@ OX1 3RH
                 <a href="movies/movS1Machvz.mp4">
                   movS1Machvz
                 </a>
-                Volume rendering of the fiducial fast 3D simulation, F3D,
-                showing the Mach number. The opacity is set linearly
-                by the kinetic energy flux.
             </b>
           </p>
 
-          <p>Movie 
+          <p>                Logarithm of Mach number 
+and vertical velocity  for a snapshot of the S1 2D 
+simulation. In the v_z plot,
+compression structures (div(v)< 0) 
+are coloured in grey to indicate shocks. Supersonic
+backflows form in both simulations and vortex shedding
+occurs from the jet head.
           </p>
 
         </div>
@@ -261,7 +263,7 @@ OX1 3RH
                     col-md-6
                     col-lg-6">
           <p>
-            <embed src="movies/movF3Dvz.mp4" autostart="false" width="300" height="600" />
+            <embed src="movies/movF1Machvz.mp4" autostart="false" width="300" height="600" />
           </p>
         </div>
         <div class="col-xs-12
@@ -274,13 +276,16 @@ OX1 3RH
                 <a href="movies/movF1Machvz.mp4">
                   ovF1Machvz
                 </a>
-                Volume rendering of the fiducial fast 3D simulation, F3D,
-                showing the Mach number. The opacity is set linearly
-                by the kinetic energy flux.
             </b>
           </p>
 
-          <p>Movie 
+          <p>                Logarithm of Mach number 
+and vertical velocity  for a snapshot of the F1 2D 
+simulation. In the v_z plot,
+compression structures (div(v)< 0) 
+are coloured in grey to indicate shocks. Supersonic
+backflows form in both simulations and vortex shedding
+occurs from the jet head.
           </p>
 
         </div>
