--- a/uhecr-movies.html
+++ b/uhecr-movies.html
@@ -77,13 +77,19 @@ It is threatened by habitat loss.
     <div class="row">
       <section class="col-md-8">
         
-          <h3 style="font-size:36px">
+          <h3 style="font-size:28px">
             UHECRs from radio galaxies
           </h3>
         
 
         <div class="lead">
-          <p style="font-size:18px"> 
+          <p style="font-size:14px"> 
+            The movies below are from the paper, 
+            <b>"Ultra-high energy cosmic rays from shocks in the lobes of radio galaxies"</b>,
+            which can be viewed <a href="https://arxiv.org/abs/1810.12350v1">on arXiv.</a><br>
+            The abstract is below, and a <a href="http://adsabs.harvard.edu/cgi-bin/nph-data_query?bibcode=2018MNRAS.479L..76M">companion paper</a> regarding Centaurus A and Fornax A is 
+            also published.
+            <br><br>
             Abstract: The origin of ultra-high energy cosmic rays (UHECRs) has been 
             an open question for decades. Here, we use a combination of 
             hydrodynamic simulations and general physical arguments 
