--- a/uhecr-movies.html
+++ b/uhecr-movies.html
@@ -83,13 +83,14 @@ It is threatened by habitat loss.
         
 
         <div class="lead">
-          <p style="font-size:14px"> 
+          <p style="font-size:18px"> 
             The movies below are from the paper, 
             <b>"Ultra-high energy cosmic rays from shocks in the lobes of radio galaxies"</b>,
-            which can be viewed <a href="https://arxiv.org/abs/1810.12350v1">on arXiv.</a><br>
+            which can be viewed <a href="https://arxiv.org/abs/1810.12350v1">on arXiv.</a><br><br>
             The abstract is below, and a <a href="http://adsabs.harvard.edu/cgi-bin/nph-data_query?bibcode=2018MNRAS.479L..76M">companion paper</a> regarding Centaurus A and Fornax A is 
             also published.
-            <br><br>
+          </p><p>
+          <p style="font-size:14px"> 
             Abstract: The origin of ultra-high energy cosmic rays (UHECRs) has been 
             an open question for decades. Here, we use a combination of 
             hydrodynamic simulations and general physical arguments 
