--- a/uhecr-movies.html
+++ b/uhecr-movies.html
@@ -87,7 +87,7 @@ It is threatened by habitat loss.
             The movies below are from the paper, 
             <b>"Ultra-high energy cosmic rays from shocks in the lobes of radio galaxies"</b>,
             which can be viewed <a href="https://arxiv.org/abs/1810.12350v1">on arXiv.</a><br><br>
-            The abstract is below, and a <a href="http://adsabs.harvard.edu/cgi-bin/nph-data_query?bibcode=2018MNRAS.479L..76M">companion paper</a> regarding Centaurus A and Fornax A is 
+            The abstract is below, and a <a href="https://academic.oup.com/mnrasl/article/479/1/L76/5032385">companion paper</a> regarding Centaurus A and Fornax A is 
             also published.
           </p><p>
           <p style="font-size:14px"> 
