added more details and papers

--- a/index.html
+++ b/index.html
@@ -318,10 +318,12 @@ OX1 3RH
             </b>
           </p>
           It would be rather elegant if all accreting supermassive black holes could essentially be described by
-          their <b>mass, Eddington ratio</b> and <b>viewing angle</b>. 
+          their mass, Eddington ratio and viewing angle. 
           While countless other complications doubtless exist 
-          (environment almost certainly being one), I am especially interested in <b>testing this paradigm.</b>
-          Part of this work involves searching for <b>reliable orientation indicators</b>, so we can constrain the geometry of absorbing and emitting plasma around the central engine. Image credit: Shen & Ho 2014.
+          (environment almost certainly being one), I am especially interested in testing this paradigm.
+          Part of this work involves searching for reliable orientation indicators, 
+          so we can constrain the geometry of absorbing and emitting plasma around the central engine. 
+          Image credit: Shen & Ho 2014.
           <p></p>
 
         </div>
