added more details and papers

--- a/index.html
+++ b/index.html
@@ -319,8 +319,7 @@ OX1 3RH
           </p>
           It would be rather elegant if all accreting supermassive black holes could essentially be described by
           their mass, Eddington ratio and viewing angle. 
-          While countless other complications doubtless exist 
-          (environment almost certainly being one), I am especially interested in testing this paradigm.
+          While countless other complications doubtless exist, I am especially interested in testing this paradigm.
           Part of this work involves searching for reliable orientation indicators, 
           so we can constrain the geometry of absorbing and emitting plasma around the central engine. 
           Image credit: Shen & Ho 2014.
