--- a/index.html
+++ b/index.html
@@ -419,12 +419,20 @@ OX1 3RH
         <p>You can find these publications on 
           <a href="http://adsabs.harvard.edu/cgi-bin/nph-abs_connect?library&libname=Publications&libid=4e68f56b0e">ADS</a>.
 
-          <p><b><a href="https://arxiv.org/abs/1810.12350">
+          <p><b><a href="https://academic.oup.com/mnras/article/482/4/4303/5151344">
                 Ultra-high energy cosmic rays from shocks in the lobes of radio galaxies
               </a></b>
-            <small>2018</small><br>
+            <small>2019</small><br>
             <b>Matthews, J. H.</b>, Bell. A., Blundell, K., Araudo, A., 
-            <br> MNRAS, in press, arXiv:1810.12350
+            <br> MNRAS, 482, 4303, arXiv:1810.12350
+          </p>
+        
+          <p><b><a href="https://arxiv.org/abs/1811.12453v1">
+                Disc wind models for FU Ori objects
+              </a></b>
+            <small>2018</small><br>
+            Milliner, K., <b>Matthews, J. H.</b>, Long, K. S., Hartmann, L.
+            <br> MNRAS, in press, arXiv:1811.12453
           </p>
 
           <p><b><a href="https://www.aanda.org/component/article?access=doi&doi=10.1051/0004-6361/201833821">
