--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ It is threatened by habitat loss.
             <a href="https://zenodo.org/record/1256805">read my PhD thesis</a>
             or <a href="docs/jmatthews_cv.pdf">read my CV.</a>
             <br><br>
-            Information and movies from my latest paper can be found here
+            Information and movies from a recent paper can be found here
             <a href="http://jhmatthews.github.io/uhecr-movies">here.</a> 
 
             </p>
@@ -379,7 +379,8 @@ OX1 3RH
       <section class="col-md-9">
         <h3>Selected Publications</h3>
         <p>Here are some of my favourite papers. You can find a full list of publications on 
-          <a href="http://adsabs.harvard.edu/cgi-bin/nph-abs_connect?library&libname=Publications&libid=4e68f56b0e">ADS</a>.
+          <a href="https://ui.adsabs.harvard.edu/public-libraries/MzYXk-dBTxiQbmxEVKsehw">ADS</a>.
+         
 
           <p><b><a href="https://academic.oup.com/mnras/article/482/4/4303/5151344">
                 Ultra-high energy cosmic rays from shocks in the lobes of radio galaxies
