--- a/uhecr-movies.html
+++ b/uhecr-movies.html
@@ -87,8 +87,10 @@ It is threatened by habitat loss.
             The movies below are from the paper, 
             <b>"Ultra-high energy cosmic rays from shocks in the lobes of radio galaxies"</b>,
             which can be viewed <a href="https://arxiv.org/abs/1810.12350v1">on arXiv.</a><br><br>
-            The abstract is below, and a <a href="https://academic.oup.com/mnrasl/article/479/1/L76/5032385">companion paper</a> regarding Centaurus A and Fornax A is 
-            also published.
+            The abstract is below. A number of companion papers have also been published, including the following studies:<br>
+            <a href="https://academic.oup.com/mnrasl/article/479/1/L76/5032385">Matthews et al. 2018</a> suggest that Fornax A and Centaurus A can explain Auger cosmic ray data.<br>
+            <a href="https://academic.oup.com/mnras/article/487/4/4571/5520827">Bell et al. 2019</a> introduce a theoretical model for acceleration by weak shocks in a backflow or `flux tube'.<br>
+            <a href="https://academic.oup.com/mnras/article/487/4/4571/5520827">Matthews et al. 2020</a> provide a review of particle acceleration in astrophysical jets.<br>
           </p><p>
           <p style="font-size:14px"> 
             Abstract: The origin of ultra-high energy cosmic rays (UHECRs) has been 
@@ -114,7 +116,7 @@ It is threatened by habitat loss.
             a class of sources which may be responsible for the 
             observed anisotropies from UHECR observatories. 
             <br><br>
-            These movies are referenced in the text of the above paper (accepted to MNRAS) and
+            These movies are referenced in the text of the above paper (published MNRAS) and
             show how supersonic backflows can form in an AGN jet.
         </div>
         
