--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ It is threatened by habitat loss.
             <br><br>
             You can find more details on my research, outreach and publications below,
             <a href="https://zenodo.org/record/1256805">read my PhD thesis</a>
-            or <a href="docs/jmatthews_cv.pdf">read my CV.</a>
+            or <a href="docs/cv.pdf">read my CV.</a>
             <br><br>
             Some recent highlights and links to data or movies:
             <li><a href="https://arxiv.org/abs/2001.03625">Recent paper</a> on stratified disc wind models for the AGN broad-line region and accompanying <a href="https://github.com/jhmatthews/windy-blr-2020/">data and notebooks.</a></li>
