--- a/blr.html
+++ b/blr.html
@@ -1,1 +1,6 @@
+<head>
 <meta http-equiv="refresh" content="5; URL=https://github.com/jhmatthews/windy-blr-2020" />
+</head>
+<body>
+  <p>If you are not redirected in five seconds, <a href="https://github.com/jhmatthews/windy-blr-2020">click here</a>.</p>
+</body>
