added new papers

--- a/index.html
+++ b/index.html
@@ -387,12 +387,37 @@ It is threatened by habitat loss.
         <p>Here are some of my favourite papers. You can find a full list of publications on 
           <a href="https://ui.adsabs.harvard.edu/public-libraries/MzYXk-dBTxiQbmxEVKsehw">ADS</a>.
           
-          <p><b><a href="https://arxiv.org/abs/2001.03625">
+
+          <p><b><a href="https://ui.adsabs.harvard.edu/abs/2021MNRAS.tmp..772M/abstract">
+            Particle acceleration in radio galaxies with flickering jets: GeV electrons to ultrahigh energy cosmic rays
+          </a></b>
+          <small>2021</small><br>
+            <b>Matthews, J. H.</b>, Taylor, A. M. 
+            <br> MNRAS in press.
+          </p> 
+
+          <p><b><a href="https://ui.adsabs.harvard.edu/abs/2021MNRAS.502.4154R/abstract">
+            Placing LOFAR-detected quasars in C IV emission space: implications for winds, jets and star formation
+          </a></b>
+          <small>2021</small><br>
+            Rankine, A. L.<b>Matthews, J. H.</b>, Hewett, P. C., Banerji, M., Morabito L. K., Richards, G. T. 
+            <br> MNRAS, 502, 4154
+          </p> 
+
+          <p><b><a href="https://ui.adsabs.harvard.edu/abs/2020NewAR..8901543M/abstract">
+            Particle acceleration in astrophysical jets
+          </a></b>
+          <small>2020</small><br>
+            <b>Matthews, J. H.</b>, Bell, A. R.; Blundell, K. M..
+            <br> New AStronomy Reviews, 89, 101543
+          </p> 
+
+          <p><b><a href="https://ui.adsabs.harvard.edu/abs/2020MNRAS.492.5540M/abstract">
             Stratified disc wind models for the AGN broad-line region: ultraviolet, optical and X-ray properties
           </a></b>
-          <small>2019</small><br>
+          <small>2020</small><br>
             <b>Matthews, J. H.</b>, Knigge, C., Higginbottom, N., Long, K. S., et al., 
-            <br> MNRAS in press.
+            <br> MNRAS, 492, 5540
           </p> 
            
           <p><b><a href="https://arxiv.org/abs/1908.00320">
