--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@ It is threatened by habitat loss.
        <p>
         <b><a href="https://arxiv.org/abs/2001.03625">Stratified Disc Wind Models for the AGN broad-line region</a></b>
        </p>
-       <p><li><a href="https://arxiv.org/abs/2001.03625">Recent paper</a> on stratified disc wind models for the AGN broad-line region and accompanying 
-            <a href="https://github.com/jhmatthews/windy-blr-2020/">data and notebooks.</a></li></a></p>
+       <p><a href="https://arxiv.org/abs/2001.03625">Recent paper</a> on stratified disc wind models for the AGN broad-line region and accompanying 
+            <a href="https://github.com/jhmatthews/windy-blr-2020/">data and notebooks.</a></a></p>
       </div>
       </div>
     
