--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ It is threatened by habitat loss.
       </div>
       <div class="col-xs-12 col-sm-9 col-md-6 col-lg-7">
        <p>
-        <b><a href="http://jhmatthews.github.io/uhecr-movies">UHECRs from Radio Galaxies/a></b>
+        <b><a href="http://jhmatthews.github.io/uhecr-movies">UHECRs from Radio Galaxies</a></b>
        </p>
        <p><a href="http://jhmatthews.github.io/uhecr-movies">Information and movies</a> from a recent paper about UHECRs from shocks in the lobes of radio galaxies.</li></p>
       </div>
