--- a/index.html
+++ b/index.html
@@ -587,9 +587,54 @@ It is threatened by habitat loss.
   <section class="container">
     <div class="row">
       <div class="col-md-9">
-        <h3>Talk Highlights</h3>
+        <h3>Selected Talks</h3>
       </div>
     </div>
+    
+    <div class="row">
+        <div class="col-md-9">
+          <p>
+            <b>   
+               Invited Review: Sources of UHECRs
+            </b>
+            <small>
+              July 2022
+            </small>
+            <br>
+              European Cosmic Ray Symposium, Nijmegen</a>
+          </p>
+        </div>
+      </div>
+
+    <div class="row">
+        <div class="col-md-9">
+          <p>
+            <b>   
+               Invited Review: Particle acceleration in AGN jets
+            </b>
+            <small>
+              July 2022
+            </small>
+            <br>
+              EuCAPT Symposium, Remote</a>
+          </p>
+        </div>
+      </div>
+
+    <div class="row">
+        <div class="col-md-9">
+          <p>
+            <b>   
+               Jet Modelling in Radio-Loud AGN
+            </b>
+            <small>
+              July 2022
+            </small>
+            <br>
+              EAS 2020, Remote</a>
+          </p>
+        </div>
+      </div>
     
     <div class="row">
         <div class="col-md-9">
