--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ It is threatened by habitat loss.
         <div class="lead">
           <p>I’m an astrophysicist working at the University of Cambridge. 
           My research is at the intersection of theory and observation and my interests are fairly broad, but fundamentally I am interested in the extreme 
-          and exotic physics regimesthat can be probed using accreting black holes and the outflows they produce. 
+          and exotic physics that can be probed using accreting black holes and the outflows they produce. 
             <br><br>
           In particular, my work focuses on the origins 
           of the highest energy cosmic rays, the physics of accretion disc winds, the disc-wind-jet connection in AGN and the hydrodynamics of astrophysical jets. 
