--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ It is threatened by habitat loss.
                     col-md-3
                     col-lg-2">
           <p>
-            <img src="/img/her_a.png"
+            <img src="/img/uhecr_map.png"
                  class="img-responsive img-thumbnail"
                  style="width:100%">
           </p>
