--- a/dphil.html
+++ b/dphil.html
@@ -90,7 +90,7 @@ It is threatened by habitat loss.
             <a href="https://www.physics.ox.ac.uk/study/postgraduates/dphil-atmospheric-oceanic-and-planetary-physics/planetary-and-exoplanetary-0-5">
               Oxford Astro webpage.
             </a>
-            The projects I'm offering are entitled 
+            The projects I'm offering are on "Particle Acceleration in Astrophysical Jets" and "The origins of the highest energy particles in nature".  
             <br><br>
             Lower down on this page I've simply posted a few links to talks I've given or 
             reading material that might provide useful context on the two projects and give 
