--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ It is threatened by habitat loss.
         
 
         <div class="lead">
-          <p><b>Work with me:</b> I'm delighted to be offering DPhil projects for an October 2023 start. <a href="https://jhmatthews.github.io/dphil">Read more here.</a>
+<!--           <p><b>Work with me:</b> I'm delighted to be offering DPhil projects for an October 2023 start. <a href="https://jhmatthews.github.io/dphil">Read more here.</a> -->
           <p>I’m an astrophysicist working at the University of Oxford as a Royal Society URF. 
           My research is at the intersection of theory and observation and my interests are fairly broad, but fundamentally I am interested in the extreme 
           and exotic physics that can be probed using accreting black holes and the outflows they produce. 
